now data gets saved in universal format

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "java",
             "name": "App",
             "request": "launch",
-            "mainClass": "com.dnd.App",
-            "projectName": "JavaDnD"
+            "mainClass": "com.dnd/com.dnd.App",
+            "projectName": "demo"
         }
     ]
 }
