modified:   .gitignore 	modified:   .vscode/launch.json 	modified:   src/main/java/com/dnd/App.java 	modified:   src/main/java/com/dnd/DefinitionManager.java 	modified:   src/main/java/com/dnd/MiscsManager.java 	new file:   src/main/java/com/dnd/SpellManager.java 	modified:   src/main/java/com/dnd/ThrowManager.java 	modified:   src/main/java/com/dnd/ViewModel.java 	modified:   src/main/java/com/dnd/characters/GameCharacter.java 	modified:   src/main/java/com/dnd/items/Spell.java 	deleted:    src/main/java/com/dnd/ui/panes/CustomizationPane.java 	modified:   src/main/java/com/dnd/ui/panes/EquipmentPane.java 	renamed:    src/main/java/com/dnd/ui/tabs/ProficienciesTab.java -> src/main/java/com/dnd/ui/panes/ProficienciesPane.java 	modified:   src/main/java/com/dnd/ui/panes/SystemPane.java 	modified:   src/main/java/com/dnd/ui/tabs/CharacterTab.java 	modified:   src/main/java/com/dnd/ui/tabs/InfoTab.java 	modified:   src/main/java/com/dnd/ui/tabs/MagicTab.java 	modified:   src/main/java/com/dnd/ui/tooltip/TooltipComboBox.java 	modified:   src/main/java/com/dnd/ui/tooltip/TooltipLabel.java 	modified:   src/main/resources/groups.json 	new file:   src/main/resources/spellDescriptions_en.properties 	new file:   src/main/resources/spellDescriptions_it.properties 	new file:   src/main/resources/spellMaterials_en.properties 	new file:   src/main/resources/spellMaterials_it.properties 	modified:   src/main/resources/styles.css 	modified:   src/main/resources/translations_it.properties 	modified:   target/classes/definitions_it.properties 	modified:   target/classes/groups.json 	modified:   target/classes/miscs_it.properties 	modified:   target/classes/passives.json 	new file:   target/classes/spellDescriptions_en.properties 	modified:   target/classes/spellDescriptions_it.properties 	deleted:    target/classes/spellIngredients_it.properties 	new file:   target/classes/spellMaterials_en.properties 	new file:   target/classes/spellMaterials_it.properties 	modified:   target/classe

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # reference files
 old/
+utilities/
 
 # copyrighted files
 actives.json
@@ -20,7 +21,6 @@ spells.json
 definitions_it.properties
 tooltips_it.properties
 miscs_it.properties
-spellDescriptions_it.json
 
 # Package Files #
 *.jar
