--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dnd</groupId>
-    <artifactId>JavaDnD</artifactId>
+    <artifactId>javadnd</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -63,7 +63,7 @@
                 </executions>
                 <configuration>
                     <mainClass>com.dnd.App</mainClass>
-                    <launcher>JavaDnD</launcher>
+                    <launcher>javadnd</launcher>
                     <addModules>javafx.controls,javafx.fxml</addModules>
                 </configuration>
             </plugin>
